<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zinnatov.sir.ui.record.RecordUpsertActivity"
    android:orientation="vertical"
    tools:menu="@menu/record_upsert"
>
    <android.support.v7.widget.Toolbar
        android:id="@+id/recordUpsertToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/Sir.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/colorActionBarText"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputLayoutHint"
        >

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:textAppearance="@style/EditTextHint"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputLayoutHint"
        >

        <EditText
            android:id="@+id/roomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_room"
            android:inputType="number"
            android:textAppearance="@style/EditTextHint"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputLayoutHint"
        >

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount"
            android:inputType="number"
            android:textAppearance="@style/EditTextHint"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputLayoutHint"
        >

        <EditText
            android:id="@+id/inventoryIdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_inventory_id"
            android:inputType="numberSigned"
            android:textAppearance="@style/EditTextHint"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputLayoutHint"
        >

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            android:inputType="date"
            android:textAppearance="@style/EditTextHint"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputLayoutHint"
        >

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price"
            android:inputType="numberDecimal"
            android:textAppearance="@style/EditTextHint"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputLayoutHint"
        >

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_comment"
            android:inputType="text"
            android:textAppearance="@style/EditTextHint"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onApplyButtonClick"
        />

</LinearLayout>
